--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
         <header>
             <h1>📊 Marley's Newsletter CRM</h1>
             <p class="subtitle">Updated Lead Analytics Dashboard</p>
-            <p class="subtitle" style="font-size: 0.9em; margin-top: 5px;">November 13, 2025 - Momentous Campaign</p>
+            <p class="subtitle" style="font-size: 0.9em; margin-top: 5px;">November 24, 2025 - Momentous Campaign</p>
         </header>
 
         <div class="stats-grid">
@@ -286,72 +286,80 @@
 
     <script>
         const leadsData = [
-            {email: "rmurphy@nvp.com", clicks: 427, recent: 33, focus: true},
+            {email: "rmurphy@nvp.com", clicks: 432, recent: 4, focus: true},
             {email: "jgarlington@blharbert.com", clicks: 32, recent: 0, focus: true},
             {email: "jborden@harvestcapgroup.com", clicks: 30, recent: 0, focus: true},
+            {email: "mharris@renderotrust.com", clicks: 29, recent: 2, focus: true},
             {email: "dgray@seminolecountyfl.gov", clicks: 28, recent: 0, focus: true},
             {email: "gcunha@doorlandonorth.com", clicks: 28, recent: 0, focus: true},
             {email: "bcain@retailspecialists.com", clicks: 27, recent: 0, focus: true},
-            {email: "mharris@renderotrust.com", clicks: 27, recent: 3, focus: true},
             {email: "travis.sparks@lbwl.com", clicks: 19, recent: 0, focus: true},
+            {email: "steve@cozineadvisors.com", clicks: 11, recent: 1, focus: true},
             {email: "david@westonurban.com", clicks: 10, recent: 0, focus: true},
             {email: "forrest@intersection-ventures.com", clicks: 9, recent: 0, focus: true},
-            {email: "steve@cozineadvisors.com", clicks: 9, recent: 1, focus: true},
+            {email: "sean@temponovus.com", clicks: 9, recent: 0, focus: true},
+            {email: "roy@temponovus.com", clicks: 8, recent: 2, focus: true},
+            {email: "toddcromartie@icloud.com", clicks: 8, recent: 1, focus: true},
             {email: "glenn@gtsportsventures.com", clicks: 7, recent: 0, focus: true},
             {email: "jcohn@boynecapital.com", clicks: 7, recent: 0, focus: true},
             {email: "josh.lev@spwm.com", clicks: 7, recent: 0, focus: true},
-            {email: "sean@temponovus.com", clicks: 7, recent: 0, focus: true},
-            {email: "toddcromartie@icloud.com", clicks: 7, recent: 0, focus: true},
             {email: "adam.zimmerman7@gmail.com", clicks: 6, recent: 0, focus: true},
             {email: "brett@benevolentcapital.com", clicks: 6, recent: 0, focus: true},
             {email: "jfinger@mcguirewoods.com", clicks: 6, recent: 0, focus: true},
             {email: "jmaher@sopriscapital.com", clicks: 6, recent: 0, focus: true},
+            {email: "mike@arisecp.com", clicks: 6, recent: 0, focus: true},
+            {email: "rogerloughney@hotmail.com", clicks: 6, recent: 1, focus: true},
             {email: "ross@fencelinecapital.com", clicks: 6, recent: 0, focus: true},
             {email: "suraj@the4thquarter.co", clicks: 6, recent: 0, focus: true},
             {email: "trock@sasaki.com", clicks: 6, recent: 0, focus: true},
+            {email: "chris@innovatiocap.com", clicks: 5, recent: 1, focus: true},
+            {email: "claudiav@magnoliahillpartners.com", clicks: 5, recent: 0, focus: true},
             {email: "greg@pantoneim.com", clicks: 5, recent: 0, focus: true},
             {email: "humblethyself32@gmail.com", clicks: 5, recent: 0, focus: true},
             {email: "jpaul@sopriscapital.com", clicks: 5, recent: 0, focus: true},
-            {email: "mike@arisecp.com", clicks: 5, recent: 0, focus: true},
             {email: "nick@nessportsandre.com", clicks: 5, recent: 0, focus: true},
             {email: "parker.tweedley@athletiverse.io", clicks: 5, recent: 0, focus: true},
-            {email: "rogerloughney@hotmail.com", clicks: 5, recent: 2, focus: true},
-            {email: "roy@temponovus.com", clicks: 5, recent: 0, focus: true},
+            {email: "tkeyes@keyescap.com", clicks: 5, recent: 3, focus: true},
             {email: "tpaul@sopriscapital.com", clicks: 5, recent: 0, focus: true},
             {email: "ab@privateoffice.ventures", clicks: 4, recent: 0, focus: true},
             {email: "ams@certuscap.com", clicks: 4, recent: 0, focus: true},
             {email: "bl@cruxfootball.com", clicks: 4, recent: 0, focus: true},
-            {email: "chris@innovatiocap.com", clicks: 4, recent: 1, focus: true},
-            {email: "claudiav@magnoliahillpartners.com", clicks: 4, recent: 0, focus: true},
-            {email: "connerpopa21@gmail.com", clicks: 4, recent: 1, focus: true},
+            {email: "connerpopa21@gmail.com", clicks: 4, recent: 0, focus: true},
             {email: "darryl.s.shaw@gmail.com", clicks: 4, recent: 0, focus: true},
             {email: "hdg@kylemoreholdings.com", clicks: 4, recent: 0, focus: true},
             {email: "kevin.m.huss@gmail.com", clicks: 4, recent: 0, focus: true},
-            {email: "ljs120@georgetown.edu", clicks: 4, recent: 1, focus: true},
+            {email: "ljs120@georgetown.edu", clicks: 4, recent: 0, focus: true},
+            {email: "matthew@sequenceequity.com", clicks: 4, recent: 2, focus: true},
             {email: "mhughes589@gmail.com", clicks: 4, recent: 0, focus: true},
             {email: "milton@empireglobalfinancial.com", clicks: 4, recent: 0, focus: true},
             {email: "nick@bisonx.org", clicks: 4, recent: 0, focus: true},
             {email: "nnarasimhan162@gmail.com", clicks: 4, recent: 0, focus: true},
             {email: "patrick.zalupski@dreamfindershomes.com", clicks: 4, recent: 0, focus: true},
             {email: "tony.allegretti@sportingjax.com", clicks: 4, recent: 0, focus: true},
+            {email: "wadams@oakviewgroup.com", clicks: 4, recent: 1, focus: true},
             {email: "adam@rabover.com", clicks: 3, recent: 0, focus: true},
+            {email: "ben@sideyardsportspartners.com", clicks: 3, recent: 2, focus: true},
             {email: "cjeske@echo.global", clicks: 3, recent: 0, focus: true},
-            {email: "d.bullard@athletiverse.io", clicks: 3, recent: 1, focus: true},
+            {email: "d.bullard@athletiverse.io", clicks: 3, recent: 0, focus: true},
             {email: "gennaro@nextcoastsports.com", clicks: 3, recent: 0, focus: true},
+            {email: "ggreen@alliance.us", clicks: 3, recent: 3, focus: true},
             {email: "karen@gtsportsventures.com", clicks: 3, recent: 0, focus: true},
             {email: "marques@championpartners.co", clicks: 3, recent: 0, focus: true},
             {email: "melvin@gamegain.io", clicks: 3, recent: 0, focus: true},
             {email: "peter@newmexicoutd.com", clicks: 3, recent: 0, focus: true},
             {email: "redstonerentalhomes@gmail.com", clicks: 3, recent: 0, focus: true},
+            {email: "rodrigo.bueno2@bofa.com", clicks: 3, recent: 2, focus: true},
             {email: "samuelberen@gmail.com", clicks: 3, recent: 0, focus: true},
             {email: "sean@cliffordcapital.io", clicks: 3, recent: 0, focus: true},
             {email: "spencer@summitventurestudio.com", clicks: 3, recent: 0, focus: true},
-            {email: "wadams@oakviewgroup.com", clicks: 3, recent: 0, focus: true},
+            {email: "tommy@prosperityventurepartners.com", clicks: 3, recent: 1, focus: true},
             {email: "adam.zimmerman7@gmail.co", clicks: 2, recent: 0, focus: false},
+            {email: "andre@expeditionadvisory.com", clicks: 2, recent: 1, focus: false},
             {email: "awenig@sabcap.com", clicks: 2, recent: 0, focus: false},
             {email: "ben@lbkcapllc.com", clicks: 2, recent: 0, focus: false},
             {email: "benjamin.phillips@pimco.com", clicks: 2, recent: 0, focus: false},
-            {email: "bob@mudd.life", clicks: 2, recent: 1, focus: false},
+            {email: "bob@mudd.life", clicks: 2, recent: 0, focus: false},
+            {email: "bobm@whitecapsports.com", clicks: 2, recent: 1, focus: false},
             {email: "cburtner@mcrtrust.com", clicks: 2, recent: 0, focus: false},
             {email: "chefiksimo@yahoo.com", clicks: 2, recent: 0, focus: false},
             {email: "clayton@tebowgroup.com", clicks: 2, recent: 0, focus: false},
@@ -361,21 +369,27 @@
             {email: "david.lawrence@hines.com", clicks: 2, recent: 0, focus: false},
             {email: "dbelfer@belfermgmt.com", clicks: 2, recent: 0, focus: false},
             {email: "digitalsquarevc@gmail.com", clicks: 2, recent: 0, focus: false},
+            {email: "e24schwartz@gmail.com", clicks: 2, recent: 1, focus: false},
             {email: "jaimemolinaosorio@gmail.com", clicks: 2, recent: 0, focus: false},
+            {email: "jake.bargas@jll.com", clicks: 2, recent: 1, focus: false},
             {email: "jake@stormlightventures.com", clicks: 2, recent: 0, focus: false},
-            {email: "jay@sagamoreinstitute.org", clicks: 2, recent: 2, focus: false},
+            {email: "jay.kreske@aditumgroup.com", clicks: 2, recent: 1, focus: false},
+            {email: "jay@sagamoreinstitute.org", clicks: 2, recent: 0, focus: false},
+            {email: "jeff.brandt@ikstartusa.com", clicks: 2, recent: 2, focus: false},
             {email: "jon@voigtman.com", clicks: 2, recent: 0, focus: false},
             {email: "joshuaglueck@centrebackpartners.com", clicks: 2, recent: 0, focus: false},
+            {email: "jsepstein@bostonlegacyfc.com", clicks: 2, recent: 0, focus: false},
             {email: "jwarner@epogeecapital.com", clicks: 2, recent: 0, focus: false},
             {email: "keal.blache@vivenu.com", clicks: 2, recent: 0, focus: false},
             {email: "ken@ffsportsgroup.com", clicks: 2, recent: 0, focus: false},
             {email: "larry.botel@jrpllc.com", clicks: 2, recent: 0, focus: false},
-            {email: "matthew@sequenceequity.com", clicks: 2, recent: 2, focus: false},
             {email: "mfurey5@gmail.com", clicks: 2, recent: 0, focus: false},
-            {email: "mgravely2004@gmail.com", clicks: 2, recent: 1, focus: false},
+            {email: "mgravely2004@gmail.com", clicks: 2, recent: 0, focus: false},
             {email: "mhughes@magnoliahillpartners.com", clicks: 2, recent: 0, focus: false},
             {email: "mirajlee@gmail.com", clicks: 2, recent: 0, focus: false},
+            {email: "mm@privateoffice.ventures", clicks: 2, recent: 0, focus: false},
             {email: "mmcnaughton@m2rea.com", clicks: 2, recent: 0, focus: false},
+            {email: "mos4evr@outlook.com", clicks: 2, recent: 0, focus: false},
             {email: "nicolasamuels@rogers.com", clicks: 2, recent: 0, focus: false},
             {email: "oliver@aureliencapitalpartners.com", clicks: 2, recent: 0, focus: false},
             {email: "pasha@aera.inc", clicks: 2, recent: 0, focus: false},
@@ -391,38 +405,40 @@
             {email: "staff@sportingjax.com", clicks: 2, recent: 0, focus: false},
             {email: "stephen@sccapitalllc.com", clicks: 2, recent: 0, focus: false},
             {email: "tatz@roaringbrookholdings.com", clicks: 2, recent: 0, focus: false},
-            {email: "tkeyes@keyescap.com", clicks: 2, recent: 0, focus: false},
-            {email: "tommy@prosperityventurepartners.com", clicks: 2, recent: 0, focus: false},
-            {email: "wgiaco@gmail.com", clicks: 2, recent: 2, focus: false},
+            {email: "wgiaco@gmail.com", clicks: 2, recent: 0, focus: false},
             {email: "wylie.nelson@h5datacenters.com", clicks: 2, recent: 0, focus: false},
             {email: "afontein@mcguirewoods.com", clicks: 1, recent: 0, focus: false},
-            {email: "akaminski@cliffwater.com", clicks: 1, recent: 1, focus: false},
-            {email: "andre@expeditionadvisory.com", clicks: 1, recent: 0, focus: false},
+            {email: "aidan.hartman@airforceathletics.org", clicks: 1, recent: 1, focus: false},
+            {email: "akaminski@cliffwater.com", clicks: 1, recent: 0, focus: false},
             {email: "atrick.zalupski@dreamfindershomes.com", clicks: 1, recent: 0, focus: false},
             {email: "bobbyhenebry@gmail.com", clicks: 1, recent: 0, focus: false},
-            {email: "bobm@whitecapsports.com", clicks: 1, recent: 0, focus: false},
-            {email: "ccompton@magnoliahillpartners.com", clicks: 1, recent: 1, focus: false},
+            {email: "carolyn.stoner@aoshearman.com", clicks: 1, recent: 1, focus: false},
+            {email: "ccompton@magnoliahillpartners.com", clicks: 1, recent: 0, focus: false},
             {email: "charles33harris@gmail.com", clicks: 1, recent: 0, focus: false},
-            {email: "chip@proathletecommunity.com", clicks: 1, recent: 1, focus: false},
+            {email: "chip@proathletecommunity.com", clicks: 1, recent: 0, focus: false},
+            {email: "cjhubbar@andrew.cmu.edu", clicks: 1, recent: 1, focus: false},
             {email: "darryl.shaw@tampabaysunfc.com", clicks: 1, recent: 0, focus: false},
             {email: "daufhauser@gmail.com", clicks: 1, recent: 0, focus: false},
+            {email: "david.vialli@alumclubs.com", clicks: 1, recent: 0, focus: false},
             {email: "david@plyrapp.com", clicks: 1, recent: 0, focus: false},
-            {email: "dfiumara@magnoliahillpartners.com", clicks: 1, recent: 1, focus: false},
-            {email: "dtu7rr@virginia.edu", clicks: 1, recent: 1, focus: false},
-            {email: "e24schwartz@gmail.com", clicks: 1, recent: 0, focus: false},
+            {email: "dfiumara@magnoliahillpartners.com", clicks: 1, recent: 0, focus: false},
+            {email: "dtu7rr@virginia.edu", clicks: 1, recent: 0, focus: false},
             {email: "elewis@longridgepartners.ca", clicks: 1, recent: 0, focus: false},
             {email: "emaury@atriumcg.com", clicks: 1, recent: 0, focus: false},
+            {email: "ericshuffler@yahoo.com", clicks: 1, recent: 0, focus: false},
+            {email: "essang.bassey7@gmail.com", clicks: 1, recent: 0, focus: false},
             {email: "fatima@hdventuresllc.com", clicks: 1, recent: 0, focus: false},
+            {email: "global@artestmanagementgroup.com", clicks: 1, recent: 1, focus: false},
             {email: "gode.k@cacnations.com", clicks: 1, recent: 0, focus: false},
             {email: "gsmiley@geraldsmiley.com", clicks: 1, recent: 0, focus: false},
             {email: "hello@shortcornermedia.com", clicks: 1, recent: 0, focus: false},
             {email: "ian.gensler@sagespring.com", clicks: 1, recent: 0, focus: false},
             {email: "ivernonscott26@yahoo.com", clicks: 1, recent: 0, focus: false},
             {email: "jacqueline.leigh.grant@gmail.com", clicks: 1, recent: 0, focus: false},
-            {email: "jake.bargas@jll.com", clicks: 1, recent: 0, focus: false},
-            {email: "jefthimiou@gmail.com", clicks: 1, recent: 1, focus: false},
+            {email: "jefthimiou@gmail.com", clicks: 1, recent: 0, focus: false},
             {email: "jlohe@clrbrk.com", clicks: 1, recent: 0, focus: false},
-            {email: "john.choi@welcomelend.com", clicks: 1, recent: 1, focus: false},
+            {email: "john.choi@welcomelend.com", clicks: 1, recent: 0, focus: false},
+            {email: "jozy@sogility.net", clicks: 1, recent: 1, focus: false},
             {email: "jshields@creasote.com", clicks: 1, recent: 0, focus: false},
             {email: "jwarner@equilibria.capital", clicks: 1, recent: 0, focus: false},
             {email: "kevin@rockymtnlabel.com", clicks: 1, recent: 0, focus: false},
@@ -430,11 +446,10 @@
             {email: "malcolm@vettedsports.com", clicks: 1, recent: 0, focus: false},
             {email: "matt@pantoneim.com", clicks: 1, recent: 0, focus: false},
             {email: "max@bouventures.com", clicks: 1, recent: 0, focus: false},
+            {email: "megan@proathletecommunity.com", clicks: 1, recent: 1, focus: false},
             {email: "meganlynnmcnulty@gmail.com", clicks: 1, recent: 0, focus: false},
             {email: "micah@rimrockcompanies.com", clicks: 1, recent: 0, focus: false},
             {email: "michael@prometheusalts.com", clicks: 1, recent: 0, focus: false},
-            {email: "mm@privateoffice.ventures", clicks: 1, recent: 0, focus: false},
-            {email: "mos4evr@outlook.com", clicks: 1, recent: 0, focus: false},
             {email: "mshah@gtsportsventures.com", clicks: 1, recent: 0, focus: false},
             {email: "mwaldrip@dauntlesscapital.com", clicks: 1, recent: 0, focus: false},
             {email: "nick@nocapsports.io", clicks: 1, recent: 0, focus: false},
@@ -442,23 +457,24 @@
             {email: "pablo@turningpointusa.org", clicks: 1, recent: 0, focus: false},
             {email: "r.paul.sabin@gmail.com", clicks: 1, recent: 0, focus: false},
             {email: "r.salvatore.93@charlestonbattery.com", clicks: 1, recent: 0, focus: false},
-            {email: "rodrigo.bueno2@bofa.com", clicks: 1, recent: 0, focus: false},
-            {email: "rossdunbar93@gmail.com", clicks: 1, recent: 1, focus: false},
+            {email: "rossdunbar93@gmail.com", clicks: 1, recent: 0, focus: false},
             {email: "sales@prosportcourt.com", clicks: 1, recent: 0, focus: false},
             {email: "sam@northcapital.com", clicks: 1, recent: 0, focus: false},
             {email: "samir@magnoliahillpartners.com", clicks: 1, recent: 0, focus: false},
             {email: "scott.sams3@gmail.com", clicks: 1, recent: 0, focus: false},
             {email: "sfriedman@hitequity.com", clicks: 1, recent: 0, focus: false},
             {email: "smclaughlin@drivencapital.com", clicks: 1, recent: 0, focus: false},
+            {email: "spatterson@prosportsconsulting.net", clicks: 1, recent: 1, focus: false},
             {email: "sswierczewski@yahoo.com", clicks: 1, recent: 0, focus: false},
-            {email: "susanne.timosci@gmail.com", clicks: 1, recent: 1, focus: false},
+            {email: "susanne.timosci@gmail.com", clicks: 1, recent: 0, focus: false},
             {email: "syoung@fccincinnati.com", clicks: 1, recent: 0, focus: false},
             {email: "tamar.elkeles@gmail.com", clicks: 1, recent: 0, focus: false},
             {email: "traci@nancyliebermancharities.org", clicks: 1, recent: 0, focus: false},
-            {email: "trey@rtaylorins.com", clicks: 1, recent: 1, focus: false},
+            {email: "trey@rtaylorins.com", clicks: 1, recent: 0, focus: false},
+            {email: "tunde@eaglesportholdings.com", clicks: 1, recent: 1, focus: false},
             {email: "vancekvoss@gmail.com", clicks: 1, recent: 0, focus: false},
             {email: "vpainter757@gmail.com", clicks: 1, recent: 0, focus: false},
-            {email: "warrensmithusl@gmail.com", clicks: 1, recent: 1, focus: false}
+            {email: "warrensmithusl@gmail.com", clicks: 1, recent: 0, focus: false}
         ];
 
         function getTier(clicks) {
